# src/Sonarr.Api.V3/System/SystemController.cs
@@ -78,7 +78,6 @@ namespace Sonarr.Api.V3.System
                 IsDocker = _osInfo.IsDocker,
                 IsContainerized = _osInfo.IsContainerized,
                 Mode = _runtimeInfo.Mode,
-                Branch = _configFileProvider.Branch,
                 Authentication = _configFileProvider.AuthenticationMethod,
                 DatabaseType = _database.DatabaseType,
                 DatabaseVersion = _database.Version,
@@ -89,8 +88,6 @@ namespace Sonarr.Api.V3.System
                 StartTime = _runtimeInfo.StartTime,
                 PackageVersion = _deploymentInfoProvider.PackageVersion,
                 PackageAuthor = _deploymentInfoProvider.PackageAuthor,
-                PackageUpdateMechanism = _deploymentInfoProvider.PackageUpdateMechanism,
-                PackageUpdateMechanismMessage = _deploymentInfoProvider.PackageUpdateMechanismMessage
             };
         }
 
