# src/Sonarr.Api.V3/System/SystemResource.cs
@@ -2,7 +2,6 @@ using System;
 using NzbDrone.Common.EnvironmentInfo;
 using NzbDrone.Core.Authentication;
 using NzbDrone.Core.Datastore;
-using NzbDrone.Core.Update;
 
 namespace Sonarr.Api.V3.System
 {
@@ -27,7 +26,6 @@ namespace Sonarr.Api.V3.System
         public bool IsDocker { get; set; }
         public bool IsContainerized { get; set; }
         public RuntimeMode Mode { get; set; }
-        public string Branch { get; set; }
         public AuthenticationType Authentication { get; set; }
         public Version SqliteVersion { get; set; }
         public int MigrationVersion { get; set; }
@@ -37,8 +35,6 @@ namespace Sonarr.Api.V3.System
         public DateTime StartTime { get; set; }
         public string PackageVersion { get; set; }
         public string PackageAuthor { get; set; }
-        public UpdateMechanism PackageUpdateMechanism { get; set; }
-        public string PackageUpdateMechanismMessage { get; set; }
         public Version DatabaseVersion { get; set; }
         public DatabaseType DatabaseType { get; set; }
     }
