# src/Sonarr.Api.V5/Settings/GeneralSettingsResource.cs
@@ -2,7 +2,6 @@ using NzbDrone.Common.Http.Proxy;
 using NzbDrone.Core.Authentication;
 using NzbDrone.Core.Configuration;
 using NzbDrone.Core.Security;
-using NzbDrone.Core.Update;
 using Sonarr.Http.REST;
 using Sonarr.Http.Validation;
 
@@ -23,7 +22,6 @@ public class GeneralSettingsResource : RestResource, ISslCertificateResource
     public string? LogLevel { get; set; }
     public int LogSizeLimit { get; set; }
     public string? ConsoleLogLevel { get; set; }
-    public string? Branch { get; set; }
     public string? ApiKey { get; set; }
     public string? SslCertPath { get; set; }
     public string? SslKeyPath { get; set; }
@@ -31,9 +29,6 @@ public class GeneralSettingsResource : RestResource, ISslCertificateResource
     public string? UrlBase { get; set; }
     public string? InstanceName { get; set; }
     public string? ApplicationUrl { get; set; }
-    public bool UpdateAutomatically { get; set; }
-    public UpdateMechanism UpdateMechanism { get; set; }
-    public string? UpdateScriptPath { get; set; }
     public bool ProxyEnabled { get; set; }
     public ProxyType ProxyType { get; set; }
     public string? ProxyHostname { get; set; }
@@ -64,16 +59,12 @@ public static class GeneralSettingsResourceMapper
             LogLevel = model.LogLevel,
             LogSizeLimit = model.LogSizeLimit,
             ConsoleLogLevel = model.ConsoleLogLevel,
-            Branch = model.Branch,
             ApiKey = model.ApiKey,
             SslCertPath = model.SslCertPath,
             SslKeyPath = model.SslKeyPath,
             SslCertPassword = model.SslCertPassword,
             UrlBase = model.UrlBase,
             InstanceName = model.InstanceName,
-            UpdateAutomatically = model.UpdateAutomatically,
-            UpdateMechanism = model.UpdateMechanism,
-            UpdateScriptPath = model.UpdateScriptPath,
             ProxyEnabled = configService.ProxyEnabled,
             ProxyType = configService.ProxyType,
             ProxyHostname = configService.ProxyHostname,
