# src/Sonarr.Api.V5/System/SystemController.cs
@@ -77,7 +77,6 @@ public class SystemController : Controller
             IsWindows = OsInfo.IsWindows,
             IsDocker = _osInfo.IsDocker,
             Mode = _runtimeInfo.Mode,
-            Branch = _configFileProvider.Branch,
             Authentication = _configFileProvider.AuthenticationMethod,
             DatabaseType = _database.DatabaseType,
             DatabaseVersion = _database.Version,
@@ -88,8 +87,6 @@ public class SystemController : Controller
             StartTime = _runtimeInfo.StartTime,
             PackageVersion = _deploymentInfoProvider.PackageVersion,
             PackageAuthor = _deploymentInfoProvider.PackageAuthor,
-            PackageUpdateMechanism = _deploymentInfoProvider.PackageUpdateMechanism,
-            PackageUpdateMechanismMessage = _deploymentInfoProvider.PackageUpdateMechanismMessage
         });
     }
 
