# src/Sonarr.Api.V5/System/SystemResource.cs
@@ -1,7 +1,6 @@
 using NzbDrone.Common.EnvironmentInfo;
 using NzbDrone.Core.Authentication;
 using NzbDrone.Core.Datastore;
-using NzbDrone.Core.Update;
 
 namespace Sonarr.Api.V5.System;
 
@@ -25,7 +24,6 @@ public class SystemResource
     public bool IsWindows { get; set; }
     public bool IsDocker { get; set; }
     public RuntimeMode Mode { get; set; }
-    public required string Branch { get; set; }
     public AuthenticationType Authentication { get; set; }
     public int MigrationVersion { get; set; }
     public required string UrlBase { get; set; }
@@ -34,8 +32,6 @@ public class SystemResource
     public DateTime StartTime { get; set; }
     public required string PackageVersion { get; set; }
     public required string PackageAuthor { get; set; }
-    public UpdateMechanism PackageUpdateMechanism { get; set; }
-    public required string PackageUpdateMechanismMessage { get; set; }
     public required Version DatabaseVersion { get; set; }
     public DatabaseType DatabaseType { get; set; }
 }
